[Bug] SC-165597 Fix native scrollbar issue

--- a/src/main.css
+++ b/src/main.css
@@ -7,4 +7,5 @@ html, body, #root {
 
 #root {
     padding: 0px 8px;
+    box-sizing: border-box;
 }
